--- a/app/src/main/res/layout/fragment_java_comments_1.xml
+++ b/app/src/main/res/layout/fragment_java_comments_1.xml
@@ -54,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="In Java, comments are non-executable lines of code that provide explanations, annotations, or disable codes temporarily. They are essential for code documentation, readability, and collaboration. There are three types of comments in Java: single-line comments, multi-line comments, and Javadoc comments."
+            android:text="Comments are text annotations that can be added to the code to provide explanations, notes, or to temporarily disable certain lines without affecting the program's functionality. Comments are ignored by the Java compiler and are only meant for human readers and developers. They serve as documentation and aids in understanding the code. "
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -113,7 +113,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="A single line of code can be transformed into a comment to provide a brief explanation. It is considered a comment and will not be processed if text is added to a line after //."
+            android:text="These comments start with // and continue until the end of the line. Anything written after // on the same line is considered a comment and is not executed by the compiler."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
